# cmd/swag/docs/swagger.yaml
@@ -1,5 +1,12 @@
 basePath: /v1/2025
 definitions:
+  model.LoginInput:
+    properties:
+      user_account:
+        type: string
+      user_password:
+        type: string
+    type: object
   model.RegisterInput:
     properties:
       verify_key:
@@ -8,6 +15,13 @@ definitions:
         type: string
       verify_type:
         type: integer
+    type: object
+  model.UpdatePasswordRegisterInput:
+    properties:
+      user_password:
+        type: string
+      user_token:
+        type: string
     type: object
   model.VerifyInput:
     properties:
@@ -46,6 +60,32 @@ info:
   title: API Documentation Ecommerce Backend SHOPDEVGO
   version: 1.0.0
 paths:
+  /user/login:
+    post:
+      consumes:
+      - application/json
+      description: User Login
+      parameters:
+      - description: payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/model.LoginInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+      summary: User Login
+      tags:
+      - account management
   /user/register:
     post:
       consumes:
@@ -70,6 +110,32 @@ paths:
           schema:
             $ref: '#/definitions/response.ErrorResponseData'
       summary: User Registration
+      tags:
+      - account management
+  /user/update_password_register:
+    post:
+      consumes:
+      - application/json
+      description: UpdatePasswordRegister
+      parameters:
+      - description: payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/model.UpdatePasswordRegisterInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+      summary: UpdatePasswordRegister
       tags:
       - account management
   /user/verify_account:
