# internal/database/models.go
@@ -21,6 +21,34 @@ type PreGoAccUserBase9999 struct {
 	UserUpdatedAt  sql.NullTime
 }
 
+// pre_go_acc_user_9999
+type PreGoAccUserInfo9999 struct {
+	// User ID
+	UserID uint64
+	// User account
+	UserAccount string
+	// User nickname
+	UserNickname sql.NullString
+	// User avatar
+	UserAvatar sql.NullString
+	// User state: 0-Locked, 1-Activated, 2-Not Activated
+	UserState uint8
+	// Mobile phone number
+	UserMobile sql.NullString
+	// User gender: 0-Secret, 1-Male, 2-Female
+	UserGender sql.NullInt16
+	// User birthday
+	UserBirthday sql.NullTime
+	// User email address
+	UserEmail sql.NullString
+	// Authentication status: 0-Not Authenticated, 1-Pending, 2-Authe
+	UserIsAuthentication uint8
+	// Record creation time
+	CreatedAt sql.NullTime
+	// Record update time
+	UpdatedAt sql.NullTime
+}
+
 // account_user_verify
 type PreGoAccUserVerify9999 struct {
 	VerifyID        int32
