# internal/model/login.go
@@ -16,3 +16,24 @@ type VerifyOTPOutput struct {
 	UserId  string `json:"user_id"`
 	Message string `json:"message"`
 }
+
+type UpdatePasswordRegisterInput struct {
+	UserToken    string `json:"user_token"`
+	UserPassword string `json:"user_password"`
+}
+
+type LoginInput struct {
+	UserAccount  string `json:"user_account"`
+	UserPassword string `json:"user_password"`
+}
+
+type LoginOutput struct {
+	Token   string `json:"token"`
+	Message string `json:"message"`
+}
+
+type SetupTwoFactorAuth struct {
+	UserId            uint32 `json:"user_id"`
+	TwoFactorAuthType string `json:"two_factor_auth_type"`
+	TwoFactorEmail    string `json:"two_factor_email"`
+}
