# internal/routers/user/user.router.go
@@ -13,6 +13,7 @@ func (ur *UserRouter) InitUserRouter(Router *gin.RouterGroup) {
 	{
 		userRouterPublic.POST("/register", account.Login.Register)
 		userRouterPublic.POST("/verify_account", account.Login.VerifyOTP)
+		userRouterPublic.POST("/update_password_register", account.Login.UpdatePasswordRegister)
 		userRouterPublic.POST("/login", account.Login.Login)
 	}
 
